# restaVision

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .tmp_droidcam_root.html  AGENTS.md  ARQUITECTURA_TABLA_SERVICIO.md  CAMBIOS_CODIGO.md  PRUEBA_AHORA.md  README.md  README_INDEX.md  README_TABLE_SERVICE_MONITOR.md  print_summary.py  pyproject.toml  run_api_with_service_monitor.py  test_table_service_webcam.py
apps/: README.md  __init__.py
data/: README.md
docs/: README.md
infra/: README.md
models/: README.md
notebooks/: README.md
requirements/: audio.txt  base.txt  dev.txt  ml.txt
services/: README.md  __init__.py
tests/: README.md  test_alerts_anomaly.py  test_api.py  test_classical_vision.py  test_committee.py  test_confidence_gate.py  test_decision_engine_operational.py  test_decision_policy.py  test_detection_policy.py  test_evaluation_metrics.py  test_event_analytics.py  test_explainability.py  test_feature_preprocessing.py  test_feature_recorder.py  test_feature_store.py  test_forward_filter.py  test_hybrid_inference.py  test_kalman.py  test_latency_tracker.py  test_lk_tracker.py  test_maria_instructions.py  test_maria_orchestrator.py  test_monitoring_health.py  test_motion_gate.py  test_multivariate_anomaly.py  test_observation_adapter.py  test_observation_likelihood_model.py  test_occlusion.py  test_occupancy_baseline.py  test_persistence.py  test_person_demo.py  test_pose.py  test_proxemics.py  test_realtime.py  test_realtime_event_bus.py  test_release_gate.py  test_sequence_config.py  test_state_machine.py  (+18 more)
(+251 files in other folders)
